Actualización de la sección de proyectos

--- a/index.html
+++ b/index.html
@@ -41,22 +41,38 @@
         <a href="#contact">contactarme</a>.
       </p>
     </section>
-
     <section id="projects">
-      <h2>Mis Proyectos</h2>
-      <ul>
-        <li>
-          <h3>Proyecto 1</h3>
-          <p>Descripción breve del proyecto 1.</p>
-          <a href="#" target="_blank">Ver Proyecto</a>
-        </li>
-        <li>
-          <h3>Proyecto 2</h3>
-          <p>Descripción breve del proyecto 2.</p>
-          <a href="#" target="_blank">Ver Proyecto</a>
-        </li>
+      <div class="container">
+        <h2>Mis Proyectos</h2>
+
+        <!-- Proyecto: Organizador de Carreras Virtuales -->
+        <div class="project">
+          <h3>Organizador de Carreras Virtuales</h3>
+          <p>
+            Una aplicación web que organiza carreras virtuales, registra pilotos
+            y gestiona los resultados de campeonatos.
+          </p>
+          <a
+            href="https://github.com/michelsoler74/organizador-de-carreras-virtuales"
+            target="_blank"
+            class="btn"
+            >Ver Código en GitHub</a
+          >
+          <a
+            href="https://michelsoler74.github.io/organizador-de-carreras-virtuales"
+            target="_blank"
+            class="btn"
+            >Ver Proyecto</a
+          >
+        </div>
+
         <!-- Añadir más proyectos aquí -->
-      </ul>
+        <div class="project">
+          <h3>Nombre del Proyecto</h3>
+          <p>Breve descripción del proyecto .</p>
+          <a href="#" target="_blank" class="btn">Ver Proyecto</a>
+        </div>
+      </div>
     </section>
 
     <section id="contact">
