añadido nuevo proyecto asistente-de-la-3-edad

--- a/index.html
+++ b/index.html
@@ -82,6 +82,20 @@
             >
           </div>
         </article>
+        <section id="proyecto-asistente">
+          <h2>Asistente de la 3ª Edad</h2>
+          <p>
+            Este proyecto es un asistente virtual capaz de responder preguntas,
+            recordar interacciones y aprender de los usuarios para mejorar su
+            experiencia. <br />
+            <b
+              href="https://github.com/michelsoler74/asistente-de-la-3-edad"
+              target="_blank"
+              >Ver el código en GitHub</b
+            >
+          </p>
+        </section>
+
         <!-- Añadir más proyectos aquí -->
       </div>
     </section>
