boton de github para el asistente-de-la-3-edad

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <a href="#contact">contactarme</a>.
       </p>
     </section>
+
     <section id="projects">
       <h2>Mis Proyectos</h2>
       <div class="projects-container">
@@ -82,20 +83,34 @@
             >
           </div>
         </article>
-        <section id="proyecto-asistente">
-          <h2>Asistente de la 3ª Edad</h2>
+
+        <article class="project">
+          <h3>Asistente de la 3ª Edad</h3>
           <p>
             Este proyecto es un asistente virtual capaz de responder preguntas,
             recordar interacciones y aprender de los usuarios para mejorar su
-            experiencia. <br />
-            <b
+            experiencia.
+          </p>
+          <div class="project-links">
+            <a
               href="https://github.com/michelsoler74/asistente-de-la-3-edad"
               target="_blank"
-              >Ver el código en GitHub</b
+              rel="noopener noreferrer"
+              class="btn"
+              >Ver Código en GitHub</a
             >
-          </p>
-        </section>
-
+            <!-- Descomenta esto si tienes un enlace al proyecto en producción -->
+            <!-- 
+            <a
+              href="https://URL_DE_TU_PROYECTO"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="btn"
+              >Ver Proyecto</a
+            >
+            -->
+          </div>
+        </article>
         <!-- Añadir más proyectos aquí -->
       </div>
     </section>
