cambio de styles

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </section>
 
     <footer>
-      <p>&copy; 2024 - Tu nombre</p>
+      <p>&copy; 2024 - michel soler</p>
     </footer>
   </body>
 </html>
